@@ -31,8 +31,10 @@ documents those changes that are of interest to users and admins.
  -- Added high-throughput computing web page with configuration guidance.
  -- Use more srun sockets to process incoming PMI (MPICH2) connections for
     better scalability.
- -- Added DebugFlags for the select/bluegene plugin DEBUG_FLAG_BG_PICK
-    DEBUG_FLAG_BG_WIRES DEBUG_FLAG_BG_ALGO DEBUG_FLAG_BG_ALGO_DEEP
+ -- Added DebugFlags for the select/bluegene plugin: DEBUG_FLAG_BG_PICK,
+    DEBUG_FLAG_BG_WIRES, DEBUG_FLAG_BG_ALGO, and DEBUG_FLAG_BG_ALGO_DEEP.
+ -- Remove vestigial job record field "kill_on_step_done" (internal to the
+    slurmctld daemon only).
 
 * Changes in SLURM 2.2.0.pre6
 =============================
